# hypermodern-bersten

./: .flake8  .gitignore  .python-version  README.md  coverage.xml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt  reference.rst.txt
src/hypermodern-python/: __init__.py
src/hypermodern_bersten/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
