[tool.poetry]
name = "hypermodern-bersten"
version = "0.1.0"
description = "The Hypermodern Python Tutorial"
authors = ["justusbersten <justusbersten@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mjt91/hypermodern-bersten"
repository = "https://github.com/mjt91/hypermodern-bersten"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[tool.poetry.scripts]
hypermodern-bersten = "hypermodern_bersten.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_bersten"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"